[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "4pace"
version = "0.1.1-alpha"
authors = [
  { name="daniel-sakdinun", email="sakdinun.thewana@gmail.com" },
]
description = "Four-Quadrant Power Analysis & Computational Engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/daniel-sakdinun/4PACE.git"